improves process page formatting

--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -164,33 +164,66 @@
             <span class="phone-number">+680 488-4331</span>
           </div>
         </div>
+
+
         <div class="col-md-9 content">
           <h1 class="title">Immigration and Labor</h1>
-          <p>All businesses must comply with Palauan immigration and labor regulations.</p>
-          <h2>Requirements</h2>
-          <p>You or your designated agent must:</p>
-          <ol>
-            <li>Apply for an investor's travel visa from the Department of Immigration, if needed.</li>
-            <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN), available <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
-            </li>
-            <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a>.
-            </li>
-          </ol>
-          <h2>Materials</h2>
-          <p>Information required to register your company's Palauan employees with the Social Security Administration includes:
-            <ul>
-              <li>Name</li>
-              <li>Address</li>
-              <li>Individual Social Security Number
-              </li>
-            </ul>
-            <h2>Fees</h2>
-            <ul>
-              <li>The visa application fee is US $XX.
-              </li>
-              <li>The Social Security registration fee is US $XX.</li>
-            </ul>
-          </p>
+          <h4>All businesses must comply with Palauan immigration and labor regulations.</h4>
+
+          <h3>Steps</h3>
+
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Apply for an investor's travel visa from the Department of Immigration, if needed.
+            </span>
+          </div>
+
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN), available <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
+            </span>
+          </div>
+
+          <div class="row step-container">
+            <span class="step-number">3</span>
+            <span class="step-content">
+              Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a>.
+            </span>
+          </div>
+
+
+          <h3>Materials</h3>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Information required to register your company's Palauan employees with the Social Security Administration includes:
+              <ul>
+                <li>Name</li>
+                <li>Address</li>
+                <li>Individual Social Security Number
+                </li>
+              </ul>
+            </span>
+          </div>
+
+
+          <h3>Fees</h3>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              The visa application fee is US $XX.<br />
+              The Social Security registration fee is US $XX.
+            </span>
+          </div>
+          
         </div>
       </div>
       <!-- End main content area -->
