--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -160,22 +160,51 @@
             <span class="phone-number">+680 XXX-XXXX</span>
           </div>
         </div>
+
         <div class="col-md-9 content">
           <h1 class="title">Building Permit</h1>
-          <p>All businesses must comply with state building and zoning regulations.</p>
-          <h2>Requirements</h2>
-          <p>You or your designated agent must:</p>
-          <ol>
-            <li>Complete and submit an application to the relevant state for issuance of a building permit.</li>
-            <li>The State of Koror requires zoning approval before issuing a building permit. For specific state requirements, see 
-            <a href="">
-            Appendix I: State Licensing and Zoning Requirements.
-            </a></li>
-          </ol>
-          <h2>Materials</h2>
-          <p>Donec id elit non mi porta gravida at eget metus.</p>
-          <h2>Fees</h2>
-          <p>Donec id elit non mi porta gravida at eget metus.</p>
+          <h4>All businesses must comply with state building and zoning regulations.</h4>
+
+
+          <h3>Steps</h3>
+
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Complete and submit an application to the relevant state for issuance of a building permit.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              he State of Koror requires zoning approval before issuing a building permit. For specific state requirements, see Appendix I: State Licensing and Zoning Requirements.
+            </span>
+          </div>
+
+
+          <h3>Materials</h3>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Donec id elit non mi porta gravida at eget metus.
+            </span>
+          </div>
+
+
+          <h3>Fees</h3>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              Donec id elit non mi porta gravida at eget metus.
+            </span>
+          </div>
+
         </div>
       </div>
       <!-- End main content area -->
