--- a/process/environmental.html
+++ b/process/environmental.html
@@ -163,24 +163,47 @@
         <div class="col-md-9 content">
           <h1 class="title">Clearance: Environmental</h1>
           <h4>The people of Palau are committed to sustainable development with minimal environmental impact.</h4>
+
+          
           <h3>Steps</h3>
-          <p>You or your designated agent must:</p>
 
-          <div class="col-md-6">
-            Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus.
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.
+            </span>
           </div>
-          <br />
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.
+            </span>
+          </div>
 
-          <ol>
-            <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.</li>
-            <li>If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.</li>
-          </ol>
+
           <h3>Materials</h3>
-          <p>Donec id elit non mi porta gravida at eget metus.</p>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Donec id elit non mi porta gravida at eget metus.
+            </span>
+          </div>
+
+
           <h3>Fees</h3>
-          <ul>
-            <li>The application fee for an earthmoving permit is US $150.</li>
-          </ul>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              The application fee for an earthmoving permit is US $150.
+            </span>
+          </div>
+
         </div>
       </div>
       <!-- End main content area -->
