--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -164,28 +164,68 @@
             <span class="phone-number">+680 488-2465</span>
           </div>
         </div>
+
         <div class="col-md-9 content">
           <h1 class="title">Incorporation and Licensing</h1>
           <h4>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</h4>
-          <h2>Requirements</h2>
-          <p>You or your designated agent must:</p>
-          <ol>
-              <li>Review existing business names with the Corporate Registrar, Office of the Attorney General, and reserve your proposed business name.</li>
-              <li>Arrange for your complany deeds to be notarized in Palau.</li>
-              <li>Pay the registration fee to the Bureau of the Treasury.</li>
-              <li>Register your company with the Corporate Registrar and the Office of the Attorney General.</li>
-              <li>Submit an application for a Federal business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.</li>
-          </ol>
-          <h2>Materials</h2>
-          <p>Local requirements and contact information for state authorities can be found on the 
-          <a href="">State Licensing and Zoning Requirements</a> page.
-          <h2>Fees</h2>
-          <ul>
-              <li>The corporate registration fee is US $XX</li>
-              <li>The application fee for a Federal business license is US$XX.</li>
-              <li>Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the
-              <a href="">State process page</a>
-              for more details.</li>
+
+          <h3>Steps</h3>
+
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Review existing business names with the Corporate Registrar, Office of the Attorney General, and reserve your proposed business name.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              Arrange for your complany deeds to be notarized in Palau.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">3</span>
+            <span class="step-content">
+              Pay the registration fee to the Bureau of the Treasury.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">4</span>
+            <span class="step-content">
+              Register your company with the Corporate Registrar and the Office of the Attorney General.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">5</span>
+            <span class="step-content">
+              Submit an application for a Federal business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
+            </span>
+          </div>
+
+          <h3>Materials</h3>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Local requirements and contact information for state authorities can be found on the <a href="">State Licensing and Zoning Requirements</a> page.
+            </span>
+          </div>
+
+          <h3>Fees</h3>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              The corporate registration fee is US $XX<br />
+              The application fee for a Federal business license is US$XX.<br />
+              Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="">State process page</a> for more details.
+            </span>
+          </div>
+
         </div>
       </div>
       <!-- End main content area -->
