--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -164,24 +164,57 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="title">Clearance: Title and Cultural Affairs</h1>
-          <p>Business has long been a part of Palauan culture. Our modern businesses coexist with–and make use of–Palau's land and cultural traditions.</p>
-          <h2>Requirements</h2>
-          <p>You or your designated agent must:</p>
-          <ol>
-            <li>Conduct a title search and obtain an agreement between your business owner and titleholder.
-            </li>
-            <li>Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
-            </li>
-            <li>Submit an application to the Ministry of Cultural Affairs requesting clearance, available <a href="../applications/national/historical-clearance.pdf" target="_blank">here</a>.
-            </li>
-          </ol>
-          <h2>Materials</h2>
-          <p>Donec id elit non mi porta gravida at eget metus.</p>
-          <h2>Fees</h2>
-          <ul>
-            <li>There is no fee for the title report issued by the Bureau of Land and Survey.</li>
-            <li>The application fee for Cultural Affairs clearance is US $XX.</li>
-          </ul>
+          <h4>Business has long been a part of Palauan culture. Our modern businesses coexist with–and make use of–Palau's land and cultural traditions.</h4>
+
+
+          <h3>Steps</h3>
+          
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Conduct a title search and obtain an agreement between your business owner and titleholder.
+            </span>
+          </div>
+
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
+            </span>
+          </div>
+
+          <div class="row step-container">
+            <span class="step-number">3</span>
+            <span class="step-content">
+              Submit an application to the Ministry of Cultural Affairs requesting clearance, available <a href="../applications/national/historical-clearance.pdf" target="_blank">here</a>.
+            </span>
+          </div>
+
+
+          <h3>Materials</h3>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Donec id elit non mi porta gravida at eget metus.
+            </span>
+          </div>
+
+
+          <h3>Fees</h3>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              There is no fee for the title report issued by the Bureau of Land and Survey.<br />
+              The application fee for Cultural Affairs clearance is US $XX.
+            </span>
+          </div>
+
         </div>
       </div>
       <!-- End main content area -->
