--- a/process/utilities.html
+++ b/process/utilities.html
@@ -162,22 +162,60 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="title">Utilities</h1>
-          <p>All businesses must comply with Palau's environmental regulations.</p>
-          <h2>Requirements</h2>
-          <p>After receiving a state building permit, you or your designated agent must:</p>
-          <ol>
-            <li>Establish a business account with the Palau Public Utilities Corporation (PPUC) for electricity, water, and sewage services.</li>
-            <li>Request temporary connection for the duration of building construction.</li>
-            <li>Request permanent connection (and meter location) at least one week prior to date of business opening.</li>
-            <li>The PPUC Application is available <a href="../applications/national/ppuc-application.pdf">here</a>.</li>
-          </ol>
-          <h2>Materials</h2>
-          <p>Donec id elit non mi porta gravida at eget metus.</p>
-          <h2>Fees</h2>
-          <ul>
-            <li>The application fee for a new service contract is US $50 plus a refundable (after one year) security deposit</li>
-            <li>The meter base relocation fee is US $15 (plus and relocation-related expenses).</li>
-          </ul>
+          <h4>All businesses must comply with Palau's utilities regulations.</h4>
+
+
+          <h3>Steps</h3>
+          <div class="row step-container">
+            <span class="step-number">1</span>
+            <span class="step-content">
+              Establish a business account with the Palau Public Utilities Corporation (PPUC) for electricity, water, and sewage services.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">2</span>
+            <span class="step-content">
+              Request temporary connection for the duration of building construction.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">3</span>
+            <span class="step-content">
+              Request permanent connection (and meter location) at least one week prior to date of business opening.
+            </span>
+          </div>
+          <div class="row step-container">
+            <span class="step-number">4</span>
+            <span class="step-content">
+              The PPUC Application is available <a href="../applications/national/ppuc-application.pdf">here</a>.
+            </span>
+          </div>          
+
+
+          <h3>Materials</h3>
+
+          <div class="row step-container">
+            <span class="step-number">
+              <span class="glyphicon glyphicon-file"></span>
+            </span>
+            <span class="step-content">
+              Donec id elit non mi porta gravida at eget metus.
+            </span>
+          </div>
+
+
+          <h3>Fees</h3>
+
+          <div class="row step-container">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-usd"></span>
+            </div>
+            <span class="step-content">
+              The application fee for a new service contract is US $50 plus a refundable (after one year) security deposit.<br />
+              The meter base relocation fee is US $15 (plus and relocation-related expenses).
+            </span>
+          </div>
+
         </div>
       </div>
       <!-- End main content area -->
